--- a/modules/MMM-EmotionWeather/MMM-EmotionWeather.css
+++ b/modules/MMM-EmotionWeather/MMM-EmotionWeather.css
@@ -64,3 +64,26 @@
   line-height: 140%;
   letter-spacing: 0.32px;
 }
+.section-text {
+  position: relative;
+  width: 507px;
+  overflow: hidden;
+  white-space: nowrap;
+  box-sizing: border-box;
+  border: none;
+}
+
+.section-text span {
+  display: inline-block;
+  padding-left: 100%;
+  animation: scroll-left 15s linear infinite;
+}
+
+@keyframes scroll-left {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
