按數字123換頁面

--- a/css/main.css
+++ b/css/main.css
@@ -49,10 +49,12 @@ body {
 
 .dimmed {
   color: var(--color-text-dimmed);
+  display:none;
 }
 
 .normal {
   color: var(--color-text);
+  display: none;
 }
 
 .bright {
