跳轉123頁面 未完成全部

--- a/modules/MMM-CustomClock/MMM-CustomClock.css
+++ b/modules/MMM-CustomClock/MMM-CustomClock.css
@@ -1,8 +1,27 @@
-.custom-clock-wrapper {
+.module.page0 .custom-clock-wrapper {
   position: fixed;
   bottom: 110px;   /* 調整垂直位置 */
   left: 96px;      /* 調整水平位置 */
   font-size: 100px;
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.9);
+}
+.module.page1 .custom-clock-wrapper {
+  position: fixed;
+  bottom: 110px;   /* 調整垂直位置 */
+  left: 96px;      /* 調整水平位置 */
+  font-size: 56px;
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.module.page2 .custom-clock-wrapper {
+  position: fixed;
+  bottom: 110px;   /* 調整垂直位置 */
+  left: 96px;      /* 調整水平位置 */
+  font-size: 56px;
   font-family: "Noto Sans TC", sans-serif;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.9);
