--- a/modules/MMM-EmotionWeather/MMM-EmotionWeather.css
+++ b/modules/MMM-EmotionWeather/MMM-EmotionWeather.css
@@ -1,43 +1,43 @@
 /* MMM-EmotionWeather.css */
 
-.emotion-container {
+.module.page0 .emotion-container {
   color: rgba(255, 255, 255, 0.9);
   font-family: "Noto Sans TC", sans-serif;
   padding: 20px;
 }
-.section-title {
+.module.page0 .section-title {
   font-size: 36px;
   font-weight: 700;
   line-height: 140%;
   letter-spacing: 0.36px;
   margin-bottom: 6px;
 }
-.section-text {
+.module.page0 .section-text {
   font-size: 28px;
   font-weight: 400;
   line-height: 140%;
   margin-bottom: 24px;
 }
 
-.weather-section {
+.module.page0 .weather-section {
   border-top: 1px solid gray;
   padding-top: 20px;
   margin-top: 20px;
 }
 
-.weather-title {
+.module.page0 .weather-title {
   font-size: 22px;
   margin-bottom: 12px;
 }
 
-.weather-items {
+.module.page0 .weather-items {
   display: flex;
   flex-wrap: wrap;
   gap: 12px;
   font-size: 18px;
 }
 
-.location-date {
+.module.page0 .location-date {
   position: absolute;
   bottom: 120px;
   left: 96px;
@@ -47,13 +47,13 @@
   color: white;
 }
 
-.location-line {
+.module.page0 .location-line {
   display: flex;
   align-items: center;
   gap: 12px;
 }
 
-.date-text {
+.module.page0 .date-text {
   color: rgba(255, 255, 255, 0.7);
   font-family: "Noto Sans TC", sans-serif;
   font-size: 32px;
@@ -62,7 +62,7 @@
   line-height: 140%;
   letter-spacing: 0.32px;
 }
-.section-text {
+.module.page0 .section-text {
   position: relative;
   width: 507px;
   overflow: hidden;
@@ -71,7 +71,7 @@
   border: none;
 }
 
-.section-text span {
+.module.page0 .section-text span {
   display: inline-block;
   padding-left: 100%;
   animation: scroll-left 15s linear infinite;
@@ -84,4 +84,168 @@
   100% {
     transform: translateX(-100%);
   }
+}
+
+
+
+/* MMM-EmotionWeather.css */
+
+.module.page1 .emotion-container {
+  position: absolute;
+  bottom: -1350px;
+  color: rgba(255, 255, 255, 0.9);
+  font-family: "Noto Sans TC", sans-serif;
+  padding: 20px;
+}
+.module.page1 .section-title {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 140%;
+  letter-spacing: 0.36px;
+  margin-bottom: 6px;
+}
+.module.page1 .section-text {
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 140%;
+  margin-bottom: 24px;
+}
+
+.module.page1 .weather-section {
+  border-top: 1px solid gray;
+  padding-top: 20px;
+  margin-top: 20px;
+}
+
+.module.page1 .weather-title {
+  font-size: 22px;
+  margin-bottom: 12px;
+}
+
+.module.page1 .weather-items {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+  font-size: 18px;
+}
+
+.module.page1 .location-date {
+  position: absolute;
+  bottom: 120px;
+  left: 96px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  color: white;
+}
+
+.module.page1 .location-line {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.module.page1 .date-text {
+  color: rgba(255, 255, 255, 0.7);
+  font-family: "Noto Sans TC", sans-serif;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 140%;
+  letter-spacing: 0.32px;
+}
+.module.page1 .section-text {
+  position: relative;
+  width: 507px;
+  overflow: hidden;
+  white-space: nowrap;
+  box-sizing: border-box;
+  border: none;
+}
+
+.module.page1 .section-text span {
+  display: inline-block;
+  padding-left: 100%;
+  animation: scroll-left 15s linear infinite;
+}
+
+/* MMM-EmotionWeather.css */
+
+.module.page2 .emotion-container {
+  position: absolute;
+  bottom: -1350px;
+  color: rgba(255, 255, 255, 0.9);
+  font-family: "Noto Sans TC", sans-serif;
+  padding: 20px;
+}
+.module.page2 .section-title {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 140%;
+  letter-spacing: 0.36px;
+  margin-bottom: 6px;
+}
+.module.page2 .section-text {
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 140%;
+  margin-bottom: 24px;
+}
+
+.module.page2 .weather-section {
+  border-top: 1px solid gray;
+  padding-top: 20px;
+  margin-top: 20px;
+}
+
+.module.page2 .weather-title {
+  font-size: 22px;
+  margin-bottom: 12px;
+}
+
+.module.page2 .weather-items {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+  font-size: 18px;
+}
+
+.module.page2 .location-date {
+  position: absolute;
+  bottom: 120px;
+  left: 96px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  color: white;
+}
+
+.module.page2 .location-line {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.module.page2 .date-text {
+  color: rgba(255, 255, 255, 0.7);
+  font-family: "Noto Sans TC", sans-serif;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 140%;
+  letter-spacing: 0.32px;
+}
+.module.page2 .section-text {
+  position: relative;
+  width: 507px;
+  overflow: hidden;
+  white-space: nowrap;
+  box-sizing: border-box;
+  border: none;
+}
+
+.module.page2 .section-text span {
+  display: inline-block;
+  padding-left: 100%;
+  animation: scroll-left 15s linear infinite;
 }
