--- a/modules/MMM-SimpleTemp/MMM-SimpleTemp.css
+++ b/modules/MMM-SimpleTemp/MMM-SimpleTemp.css
@@ -1,5 +1,5 @@
-.simple-temp {
-  position: fixed;
+.module.page0 .simple-temp {
+  position: absolute;
   right: 30px;
   bottom: -800px; /* ✅ 建議從 figma 測量距離，這裡是假設值，你可以微調 */
   
@@ -11,6 +11,34 @@
   letter-spacing: 0.374px;
   color: rgba(255, 255, 255, 0.9);
 
-  text-align: center;
-  font-feature-settings: 'liga' off, 'clig' off;
+}
+
+.module.page1 .simple-temp {
+  position: absolute;
+  right: 476px;
+  bottom: -800px; /* ✅ 建議從 figma 測量距離，這裡是假設值，你可以微調 */
+  
+  font-family: "Noto Sans TC";
+  font-size: 56px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 110%; /* 即 110px 行高 */
+  letter-spacing: 0.374px;
+  color: rgba(255, 255, 255, 0.9);
+
+}
+
+.module.page2 .simple-temp {
+  position: absolute;
+  right: 476px;
+  bottom: -800px; /* ✅ 建議從 figma 測量距離，這裡是假設值，你可以微調 */
+  
+  font-family: "Noto Sans TC";
+  font-size: 56px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 110%; /* 即 110px 行高 */
+  letter-spacing: 0.374px;
+  color: rgba(255, 255, 255, 0.9);
+
 }
