--- a/modules/MMM-SimpleTemp/MMM-SimpleTemp.css
+++ b/modules/MMM-SimpleTemp/MMM-SimpleTemp.css
@@ -27,8 +27,38 @@
   color: rgba(255, 255, 255, 0.9);
 
 }
-
+/*2*/
 .module.page2 .simple-temp {
+  position: absolute;
+  right: 476px;
+  bottom: -800px; /* ✅ 建議從 figma 測量距離，這裡是假設值，你可以微調 */
+  
+  font-family: "Noto Sans TC";
+  font-size: 56px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 110%; /* 即 110px 行高 */
+  letter-spacing: 0.374px;
+  color: rgba(255, 255, 255, 0.9);
+
+}
+/*3*/
+.module.page3 .simple-temp {
+  position: absolute;
+  right: 476px;
+  bottom: -800px; /* ✅ 建議從 figma 測量距離，這裡是假設值，你可以微調 */
+  
+  font-family: "Noto Sans TC";
+  font-size: 56px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 110%; /* 即 110px 行高 */
+  letter-spacing: 0.374px;
+  color: rgba(255, 255, 255, 0.9);
+
+}
+/*4*/
+.module.page4 .simple-temp {
   position: absolute;
   right: 476px;
   bottom: -800px; /* ✅ 建議從 figma 測量距離，這裡是假設值，你可以微調 */
