--- a/modules/MMM-Date/MMM-Date.css
+++ b/modules/MMM-Date/MMM-Date.css
@@ -58,3 +58,45 @@
   line-height: 140%;         /* 即 44.8px */
   letter-spacing: 5px;
 }
+
+/*3*/
+
+.module.page3 .date-block {
+  left: 200px;
+  z-index: 10;      /* 確保在畫面上層 */
+}
+
+.module.page3 .date-subtitle {
+  position: fixed;
+  bottom: 130px;
+  right: 96px;
+
+  /* Figma Typography 對應 */
+  color: var(--Text-Primary, rgba(255, 255, 255, 0.90));
+  font-family: "Noto Sans TC", sans-serif;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;         /* 即 44.8px */
+  letter-spacing: 5px;
+}
+/*4*/
+.module.page4 .date-block {
+  left: 200px;
+  z-index: 10;      /* 確保在畫面上層 */
+}
+
+.module.page4 .date-subtitle {
+  position: fixed;
+  bottom: 130px;
+  right: 96px;
+
+  /* Figma Typography 對應 */
+  color: var(--Text-Primary, rgba(255, 255, 255, 0.90));
+  font-family: "Noto Sans TC", sans-serif;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;         /* 即 44.8px */
+  letter-spacing: 5px;
+}
