--- a/modules/MMM-FamilyWeatherStatus/MMM-FamilyWeatherStatus.css
+++ b/modules/MMM-FamilyWeatherStatus/MMM-FamilyWeatherStatus.css
@@ -70,9 +70,7 @@
   height: 124px;
   margin-top: 8px;
 }
-
-
-
+/*2*/
 
 .module.page2 .family-weather-wrapper {
   position: absolute;
@@ -101,6 +99,76 @@
 }
 
 .module.page2 .family-weather-icon {
+  position: absolute;
+  top: 1300px;
+  right: 50px;
+  width: 124px;
+  height: 124px;
+  margin-top: 8px;
+}
+/*3*/
+.module.page3 .family-weather-wrapper {
+  position: absolute;
+  top: -60px;
+  right: 30px;
+  color: white;
+  font-family: "Noto Sans TC", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.module.page3 .family-weather-title {
+  position: absolute;
+  white-space: nowrap;
+  top: 1200px;
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.module.page3 .family-weather-status {
+  font-weight: 500;
+  margin-left: 8px;
+  font-size: 32px;
+}
+
+.module.page3 .family-weather-icon {
+  position: absolute;
+  top: 1300px;
+  right: 50px;
+  width: 124px;
+  height: 124px;
+  margin-top: 8px;
+}
+/*4*/
+.module.page4 .family-weather-wrapper {
+  position: absolute;
+  top: -60px;
+  right: 30px;
+  color: white;
+  font-family: "Noto Sans TC", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.module.page4 .family-weather-title {
+  position: absolute;
+  white-space: nowrap;
+  top: 1200px;
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.module.page4 .family-weather-status {
+  font-weight: 500;
+  margin-left: 8px;
+  font-size: 32px;
+}
+
+.module.page4 .family-weather-icon {
   position: absolute;
   top: 1300px;
   right: 50px;
