--- a/modules/MMM-TodayWeatherStatus/MMM-TodayWeatherStatus.css
+++ b/modules/MMM-TodayWeatherStatus/MMM-TodayWeatherStatus.css
@@ -4,10 +4,9 @@
 }
 
 .today-weather-text {
-  position: fixed;
-  bottom: 217px;
+  position: absolute;
+  bottom: 152px;
   left: 50%;
-  transform: translateX(-50%);
   white-space: nowrap;
   width: auto;
 
@@ -20,11 +19,10 @@
   letter-spacing: 0.32px;
 }
 .today-weather-icon {
-  position: fixed;
+  position: absolute;
   width: 124px;
   height: 124px;
-  bottom: 42px;  
-  left: 50%;           /* ✅ 水平置中 */
-  transform: translateX(-50%);  /* ✅ 讓圖示中心對齊畫面中心 */
+  bottom: -20px;
+  left: 50%;          /* ✅   水平置中 */
   display: block;
 }
