--- a/modules/MMM-InfoPage/MMM-InfoPage.css
+++ b/modules/MMM-InfoPage/MMM-InfoPage.css
@@ -8,9 +8,10 @@
   flex-shrink: 0;
   box-sizing: border-box;
   position: relative;
+  background: #fff;
 }
 
-/* 移除之前的全屏覆蓋樣式 */
+/* 容器佈局 */
 .MMM-InfoPage .container-box {
   width: 100%;
   height: 100%;
@@ -42,16 +43,22 @@
 
 /* 基本樣式 */
 .MMM-InfoPage h5 {
-  font-size: 1.64rem;
-  line-height: 110%;
-  margin: 1rem 0 0.656rem 0;
   color: #000;
+  font-family: "Noto Sans TC";
+  font-size: 36px;
+  font-style: normal;
   font-weight: 500;
+  line-height: 120%;
+  margin: 1rem 0 0.5rem 0;
 }
 
 .MMM-InfoPage h6 {
-  font-size: 1.2rem;
   color: #000;
+  font-family: "Noto Sans TC";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
   margin: 1rem 0;
 }
 
@@ -65,12 +72,17 @@
 
 .MMM-InfoPage .collection-item {
   background-color: #fff;
-  line-height: 1.5rem;
   padding: 12px 16px;
   margin: 0;
   border-bottom: 1px solid #e0e0e0;
-  color: #000;
   position: relative;
+
+  color: #000;
+  font-family: "Noto Sans TC";
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
 }
 
 .MMM-InfoPage .collection-item:last-child {
@@ -98,7 +110,9 @@
 
 .MMM-InfoPage .grey-text {
   color: #666;
-  font-size: 0.9rem;
+  font-family: "Noto Sans TC";
+  font-size: 24px;
+  font-weight: 400;
 }
 
 .MMM-InfoPage ul {
@@ -107,22 +121,26 @@
 }
 
 .MMM-InfoPage ul li {
-  margin-bottom: 0.5rem;
-  line-height: 1.4;
+  margin-bottom: 0.8rem;
+  color: #000;
+  font-family: "Noto Sans TC";
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
 }
 
 .MMM-InfoPage .btn-flat {
-  background: #26a69a;
-  color: #fff;
-  border: none;
-  padding: 12px 24px;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 14px;
-  text-transform: uppercase;
-  margin-top: 2rem;
-}
-
-.MMM-InfoPage .btn-flat:hover {
-  background: #00695c;
+  width: 100%;
+  display: flex;
+  font-size: 24px;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 16px;
+  align-self: stretch;
+  border-radius: 16px;
+  background: #fff;
+  box-shadow:
+    0px 6px 20px 0px rgba(0, 0, 0, 0.15),
+    0px 8px 20px 0px rgba(0, 0, 0, 0.15);
 }
