--- a/modules/MMM-InfoPage/MMM-InfoPage.css
+++ b/modules/MMM-InfoPage/MMM-InfoPage.css
@@ -1,16 +1,21 @@
 /* 使用指定的尺寸和樣式 */
 .MMM-InfoPage {
   display: flex;
-  width: 1080px;
-  height: 1920px;
+  width: 1080px !important;
+  height: 1920px !important;
   padding: 48px 48px 0px 48px;
   align-items: flex-start;
   flex-shrink: 0;
   box-sizing: border-box;
-  position: relative;
-  background: #fff;
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  background: #fff !important;
+  z-index: 9999 !important;
 }
-
+.MMM-InfoPage ~ * {
+  display: none !important; /* 隱藏其他內容 */
+}
 /* 容器佈局 */
 .MMM-InfoPage .container-box {
   width: 100%;
