--- a/modules/MMM-EmotionWeather/MMM-EmotionWeather.css
+++ b/modules/MMM-EmotionWeather/MMM-EmotionWeather.css
@@ -11,6 +11,8 @@
   line-height: 140%;
   letter-spacing: 0.36px;
   margin-bottom: 6px;
+  z-index: 0;
+  position: relative;
 }
 .module.page0 .section-text {
   font-size: 28px;
