--- a/modules/MMM-FamilyWeatherStatus/MMM-FamilyWeatherStatus.css
+++ b/modules/MMM-FamilyWeatherStatus/MMM-FamilyWeatherStatus.css
@@ -34,11 +34,11 @@
   margin-top: 8px;
 }
 
+/*1*/
 .module.page1 .family-weather-wrapper {
   position: absolute;
-  white-space: nowrap;
-  top: 1270px;
-  right: -30px;
+  top: -60px;
+  right: 30px;
   color: white;
   font-family: "Noto Sans TC", sans-serif;
   display: flex;
@@ -49,7 +49,8 @@
 .module.page1 .family-weather-title {
   position: absolute;
   white-space: nowrap;
-  top: 1200px;
+  top: 1280px;
+  right: -30px;
   font-size: 32px;
   font-weight: 400;
   line-height: 120%;
@@ -63,8 +64,8 @@
 
 .module.page1 .family-weather-icon {
   position: absolute;
-  top: 1300px;
-  right: 50px;
+  top: 1360px;
+  right: 20px;
   width: 124px;
   height: 124px;
   margin-top: 8px;
@@ -72,9 +73,8 @@
 /*2*/
 .module.page2 .family-weather-wrapper {
   position: absolute;
-  white-space: nowrap;
-  top: 1270px;
-  right: -30px;
+  top: -60px;
+  right: 30px;
   color: white;
   font-family: "Noto Sans TC", sans-serif;
   display: flex;
@@ -85,7 +85,8 @@
 .module.page2 .family-weather-title {
   position: absolute;
   white-space: nowrap;
-  top: 1200px;
+  top: 1280px;
+  right: -30px;
   font-size: 32px;
   font-weight: 400;
   line-height: 120%;
@@ -99,8 +100,8 @@
 
 .module.page2 .family-weather-icon {
   position: absolute;
-  top: 1300px;
-  right: 50px;
+  top: 1360px;
+  right: 20px;
   width: 124px;
   height: 124px;
   margin-top: 8px;
@@ -108,9 +109,8 @@
 /*3*/
 .module.page3 .family-weather-wrapper {
   position: absolute;
-  white-space: nowrap;
-  top: 1270px;
-  right: -30px;
+  top: -60px;
+  right: 30px;
   color: white;
   font-family: "Noto Sans TC", sans-serif;
   display: flex;
@@ -121,7 +121,8 @@
 .module.page3 .family-weather-title {
   position: absolute;
   white-space: nowrap;
-  top: 1200px;
+  top: 1280px;
+  right: -30px;
   font-size: 32px;
   font-weight: 400;
   line-height: 120%;
@@ -135,8 +136,8 @@
 
 .module.page3 .family-weather-icon {
   position: absolute;
-  top: 1300px;
-  right: 50px;
+  top: 1360px;
+  right: 20px;
   width: 124px;
   height: 124px;
   margin-top: 8px;
@@ -144,9 +145,8 @@
 /*4*/
 .module.page4 .family-weather-wrapper {
   position: absolute;
-  white-space: nowrap;
-  top: 1270px;
-  right: -30px;
+  top: -60px;
+  right: 30px;
   color: white;
   font-family: "Noto Sans TC", sans-serif;
   display: flex;
@@ -157,7 +157,8 @@
 .module.page4 .family-weather-title {
   position: absolute;
   white-space: nowrap;
-  top: 1200px;
+  top: 1280px;
+  right: -30px;
   font-size: 32px;
   font-weight: 400;
   line-height: 120%;
@@ -171,8 +172,8 @@
 
 .module.page4 .family-weather-icon {
   position: absolute;
-  top: 1300px;
-  right: 50px;
+  top: 1360px;
+  right: 20px;
   width: 124px;
   height: 124px;
   margin-top: 8px;
